--- a/dashboard/templates/dashboard/_meta_table.html
+++ b/dashboard/templates/dashboard/_meta_table.html
@@ -1,10 +1,30 @@
-<table>
-    <tbody>
-        {% for key, value in meta.items %}
-        <tr>
-            <td>{{ key }}</td>
-            <td>{{ value }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div class="two_columns">
+    <div>
+        <h3>PVDAQ metadata</h3>
+        <table>
+            <tbody>
+                {% for key, value in data.meta.items %}
+                <tr>
+                    <td>{{ key }}</td>
+                    <td>{{ value }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <div>
+        <h3>Calculated system constants</h3>
+        <table>
+            <tbody>
+        {% for key, value in data.system_constants.items %}
+                <tr>
+                    <td>{{ key }}</td>
+                    <td>{{ value }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+<div style="clear: both;"></div>
+
