--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}PV Dashboard{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'dashboard/dashboard.css' %}">
 </head>
 <body>
+    <div class="sidebar">
     <h1>PV Dashboard</h1>
-
-    {% block content %}
-    {% endblock %}
+    <br>
+        <a href="{% url 'dashboard_individual_systems' %}" class="{% if active_page == 'individual_systems' %}active{% endif %}">Individual System Forecast</a>
+        <a href="{% url 'dashboard_all_systems' %}" class="{% if active_page == 'all_systems' %}active{% endif %}">All System Forecast</a>
+    </div>
+    <div class="content">
+        <h1>{% block title %}{% endblock %}</h1>
+        {% block content %}
+        {% endblock %}
+    </div>
 
     <script src="{% static 'dashboard/dashboard_api.js' %}"></script>
+
 </body>
 </html>
