--- a/dashboard/templates/dashboard/models_info.html
+++ b/dashboard/templates/dashboard/models_info.html
@@ -3,16 +3,8 @@
 {% block title %}Machine Learning Models{% endblock %}
 
 {% block content %}
-    {% for model, data in models.items %}
-        <div class="system-block">
-            <h2>{{model}}</h2>
-            The model was trained on the features
-            <h3>{{data.features}}</h3>
-            to predict the feature {{data.target}}.
-            <h3>Evaluation results</h3>
-            {{data.evaluations|safe}}
-            <h3>Hyperparameters</h3>
-            {{data.parameter|safe}}
-        </div>
+    {% for i in indices %}
+        <div id="model-name-{{ i }}" class="model-block"></div>
+        <div id="model-data-{{ i }}" class="model-block"></div>
     {% endfor %}
 {% endblock %}
