use unique css for all blocks

--- a/dashboard/templates/dashboard/models_info.html
+++ b/dashboard/templates/dashboard/models_info.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     {% for i in indices %}
-        <div id="model-name-{{ i }}" class="model-block"></div>
-        <div id="model-data-{{ i }}" class="model-block"></div>
+        <div id="model-name-{{ i }}" class="system-block"></div>
+        <div id="model-data-{{ i }}" class="system-block"></div>
     {% endfor %}
 {% endblock %}
