Prepare introducing more plots on all system page later

--- a/dashboard/templates/dashboard/all_systems.html
+++ b/dashboard/templates/dashboard/all_systems.html
@@ -3,6 +3,10 @@
 {% block title %}All System Forecast{% endblock %}
 
 {% block content %}
+<div id="all-systems-container", class="forecast-container"></div>
+<div id="all-forecast-weather" class="forecast-container"></div>
+<div id="all-forecast-features" class="forecast-container"></div>
+<div id="all-forecast-prediction" class="forecast-container"></div>
 <h2>Pvdaq metadata and calculated system constants</h2>
 {{metadata|safe}}
 <h2>Evaluation results on each photovoltaic system</h2>
