Take out all_system evaluation

--- a/dashboard/templates/dashboard/all_systems.html
+++ b/dashboard/templates/dashboard/all_systems.html
@@ -9,6 +9,6 @@
 <div id="all-forecast-prediction" class="forecast-container"></div>
 <h2>Pvdaq metadata and calculated system constants</h2>
 {{metadata|safe}}
-<h2>Evaluation results on each photovoltaic system</h2>
-{{evaluations|safe}}
+{% comment %}<h2>Evaluation results on each photovoltaic system</h2>
+{{evaluations|safe}}{% endcomment %}
 {% endblock %}
